@@ -87,7 +87,9 @@
 			    <configuration>
 	    	        <forkCount>1</forkCount>
 	    	        <reuseForks>false</reuseForks>
-	    	        <argLine>${surefireArgLine} -Xms128M -Xmx768m -XX:MaxPermSize=256m</argLine>
+	    	        <runOrder>random</runOrder>
+	    	        <enableAssertions>true</enableAssertions>
+	    	        <argLine>-Xms64M -Xmx512M ${surefireArgLine}</argLine>
 			    </configuration>
 			</plugin>
 			<plugin>
